--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
        <!--ABOUT-->
 
       <section class="section" id="about">
-        <div class="container grid">
+        <div class="container">
           <div class="image">
             <img
               src="https://media.istockphoto.com/photos/eyebrow-makeup-treatment-picture-id1285923568?b=1&k=20&m=1285923568&s=170667a&w=0&h=HdbBBhpZfUPuP0ciXbut7ZSNfgUbUkbVjsYc4hU1_3g="
@@ -188,13 +188,50 @@
         </div>
       </section>
 
+      <div class="divider-2"></div> 
+
         <!--contact-->
+        <section class="section" id="contact">
+          <div class="container grid">
+           <div class="text">
+             <h2 class="title">
+               Entre em contato comigo!
+             </h2>
+             <p>
+               Entre em contato com a Luciana, quero tirar suas dúvidas, agendar um horário para deixar você deslumbrante!
+             </p>
+             <a href="#" class="button"><i class="icon-whatsapp"></i>Entrar em contato</a>
+           </div>
+
+           <div class="links">
+            <ul class="grid">
+             <li><i class="icon-fone"></i>11 99845-6754</li>
+             <li><i class="icon-map-pin"></i>Loremfsafas</li>
+             <li><i class="icon-email"></i>fahsf@gmail.com</li>
+            </ul>
+           </div>
+          </div>
+        </section>
+        <div class="divider-1"></div>
+
+        <footer>
+          <div class="container grid">
+            <div class="brand">
+              <a class="logo" href="#home">Luciana<span>Design</span></a>
+              <p>&copy;2022 LucianaDesign</p>
+              <p>Todos os direitos reservados.</p>
+            </div>
+          </div>
+        </footer>
+
     </main>
 
-    <footer></footer>
+    
     <!--swiper-->
-
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+
+    <!--scroll-->
+    <script src="https://unpkg.com/scrollreveal"></script>
 
     <!--main.js-->
     <script src="main.js"></script>
